--- a/.gitignore
+++ b/.gitignore
@@ -2,3 +2,58 @@
 *.hex
 *.txt
 node_modules
+HeatMapNodeV1.Harness
+HeatMapNodeV1.PcbDoc
+HeatMapNodeV1.PrjPcb
+HeatMapNodeV1.PrjPcbStructure
+HeatMapNodeV1.SchDoc
+HeatMapNodeV2.PcbDoc
+HeatMapNodeV1.~(1).PcbDoc.Zip
+HeatMapNodeV1.~(1).PrjPcb.Zip
+HeatMapNodeV1.~(1).SchDoc.Zip
+HeatMapNodeV1.~(12).PcbDoc.Zip
+HeatMapNodeV1.~(13).PcbDoc.Zip
+HeatMapNodeV1.~(14).PcbDoc.Zip
+HeatMapNodeV1.~(15).PcbDoc.Zip
+HeatMapNodeV1.~(16).PcbDoc.Zip
+HeatMapNodeV1.~(3).SchDoc.Zip
+HeatMapNodeV1.~(4).SchDoc.Zip
+HeatMapNodeV1.~(5).PcbDoc.Zip
+HeatMapNodeV1.~(5).SchDoc.Zip
+HeatMapNodeV1.~(6).PcbDoc.Zip
+HeatMapNodeV1.~(6).SchDoc.Zip
+HeatMapNodeV1.~(7).PcbDoc.Zip
+HeatMapNodeV1.~(7).SchDoc.Zip
+HeatMapNodeV1.~(8).PcbDoc.Zip
+HeatMapNodeV1.~(9).PcbDoc.Zip
+HeatMapNodeV1 PCB ECO 2018-09-13 10-22-02 PM.LOG
+HeatMapNodeV1 PCB ECO 9-3-2018 12-45-40 PM.LOG
+HeatMapNodeV2 PCB ECO 8-29-2018 1-20-49 PM.LOG
+HeatMapNodeV1.PcbDocPreview
+HeatMapNodeV1.SchDocPreview
+HeatMapNodeV2.PcbDocPreview
+HeatMapNodeV1.~(2).PcbDoc.Zip
+HeatMapNodeV1.~(3).PcbDoc.Zip
+HeatMapNodeV1.~(4).PcbDoc.Zip
+debug.log
+extender.bgproj
+extender.bgs
+extender_config.xml
+extender_gatt.xml
+extender_hardware.xml
+master.bgproj
+master.bgs
+master_config.xml
+master_gatt.xml
+master_hardware.xml
+slave.bgproj
+slave.bgs
+slave_config.xml
+slave_gatt.xml
+slave_hardware.xml
+slave_i2c.bgproj
+arraytest.exe
+sqltest.exe
+test.exe
+timetest.exe
+vectest.exe
