--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -11,7 +11,8 @@
         "type_traits": "cpp",
         "xhash": "cpp",
         "xutility": "cpp",
-        "utility": "cpp"
+        "utility": "cpp",
+        "ratio": "cpp"
     },
     "python.linting.pylintEnabled": true,
     "python.formatting.provider": "yapf"
